# indigobot-webui

./: .aider.chat.history.md  .aider.input.history  .coverage  .dockerignore  .gitignore  .readthedocs.yaml  Dockerfile  README.md  chainlit.md  chat_cache.db  config.py  pyproject.toml  requirements.txt
.aider.tags.cache.v3/: cache.db
.chainlit/: config.toml
docs/: Makefile  requirements.txt
html_files/: act-program.html  alpha-apartments.html  ankeny-square.html  biltmore.html  blackburn.html  butte.html  cambridge-court.html  cedar-commons.html  central-city-staffing.html  charlotte-b-rutherford-apartments.html  chez-ami-apartments.html  clean-start.html  crescent-court-apartments.html  employment-access-center.html  employment-assistance-at-blackburn-center.html  estate-hotel.html  flip-the-script.html  golden-west.html  hazel-heights.html  health-care-at-blackburn-center.html  henry-building.html  hepatitis-c-testing-and-treatment.html  hill-park-apartments.html  hooper-detoxification-stabilization-center.html  hotel-alder.html  imani-center.html  interstate-crossing.html  karibu-stabilization-program.html  katherine-gray.html  letty-owings-center.html  madrona-studios.html  medford-hotel.html  meridian-gardens.html  miracles-central.html  mobile-health.html  old-town-clinic-health-care.html  old-town-clinic-recovery-services.html  old-town-recovery-center.html  puentes.html  recovery-at-blackburn-center.html  (+11 more)
langchain_app/: __init__.py  base_model.py  config.py  custom_loader.py  doctool.py  gen_docstrings.py  requirements.txt  slack_bot.py  sql.py  sql_agent.py  test.py
rag_data/: indigo_bot_db.sqlite
tests/: __init__.py  requirements-test.txt  test_base_model.py  test_crawler.py  test_custom_loader.py  (+5 more)
(+216 files in other folders)
