[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "project-indigo"
version = "1.0.0"
description = "Chatbot for Social Services - PSU capstone FW24"
readme = "README.md"
license = {text = "GPL-3.0"}
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "langchain"
]

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.pylama]
format = "pylint"
skip = "*/.tox/*,*/.env/,*/.git/*,*/.github/*,*/build/*,.direnv/*"
linters = "pycodestyle,pyflakes,pylint,mccabe,mypy,radon"
# E402:     Module level import not at top of file
# C901:     Function is too complex
# C0103:    Arguments are not snake_case naming style or too short
# E203:     Whitespace before ':' (black does this)
# R0912:    Too many branches
# R0915:    Too many statements
# R0901:    Function is too complex
# R0914:    Too many local variables
# R1716:    Simplify chained comparison between the operands
# C0413:    Imports not at top of module
# C0206:    Consider iterating dictionaries with .items()
# R1716:    Simplify chained comparison between the operands
# W1514:    Using open without explicitly specifying an encoding
# R1702:    Too many nested blocks
# E0401:    Cannot find implementation or library stub for module named
# R0902:    Too many instance attributes
# W0511:    TODOs or FIXMEs
ignore = "E402,C901,C0103,E203,R0912,R0915,R901,R901,R0914,C0413,C0206,R1716,W1514,R1702,E0401,R0902,W0511"
max_line_length = 100

[tool.isort]
profile = "black"
line_length = 100